@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         PANT
-version:      0.11
+version:      0.12
 version_from: PANT.pm
 installdirs:  site
 requires:
@@ -13,13 +13,14 @@ requires:
     Exporter:                      0
     File::Basename:                0
     File::Copy:                    0
+    File::Copy::Recursive:         0
     File::Find:                    0
     File::Path:                    0
     File::Spec::Functions:         0
     Getopt::Long:                  0
     IO::File:                      0
     Test::Harness:                 0
-    XML::Writer:                   0.52
+    XML::Writer:                   0
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.25
