@@ -1,10 +1,18 @@
 use Test::More tests => 15;
+use Config;
 
 BEGIN { use_ok('PANT') };
 BEGIN { use_ok('PANT::Cvs') };
 
 my $outfile = "xxxtest3.html";
 my @testarg = ("-output", $outfile);
+
+$this_perl = $^X; 
+if ($^O ne 'VMS') {
+    $this_perl .= $Config{_exe}
+    unless $this_perl =~ m/$Config{_exe}$/i;
+}
+
 @ARGV = @testarg;
 @delfiles = ($outfile);
 StartPant();
@@ -25,7 +33,7 @@ EOF
 
 my $cvs = Cvs();
 ok($cvs, "Cvs allocated");
-my $command = qq{$^X -ne '{ print; }' xxxtest.txt};
+my $command = qq{$this_perl -ne '{ print; }' xxxtest.txt};
 ok($cvs->Run($command), "Cvs Run $command ok");
 ok($cvs->HasUpdate(), "An updated file has been spotted");
 ok(!$cvs->HasLocalMod(), "A local file has not been modifed");
@@ -37,7 +45,7 @@ cvs update: Updating hlp
 cvs update: Updating html
 cvs update: Updating res
 EOF
-ok($cvs->Run("$^X -ne '{ print; }' xxxtest.txt"), "Cvs Run ok");
+ok($cvs->Run("$this_perl -ne '{ print; }' xxxtest.txt"), "Cvs Run ok");
 ok(!$cvs->HasUpdate(), "An update has not occured");
 ok($cvs->HasLocalMod(), "A local file has  been modifed");
 ok(!$cvs->HasConflict(), "A file has not conflicted");
@@ -49,7 +57,7 @@ cvs update: Updating html
 cvs update: Updating res
 EOF
 
-ok($cvs->Run("$^X -ne '{ print; }' xxxtest.txt"), "Cvs Run ok");
+ok($cvs->Run("$this_perl -ne '{ print; }' xxxtest.txt"), "Cvs Run ok");
 ok(!$cvs->HasUpdate(), "An update has not occured");
 ok(!$cvs->HasLocalMod(), "A local file has  been modifed");
 ok($cvs->HasConflict(), "A file has conflicted");
